# Self-learning-ai

./: Dockerfile  README.md  app.py  index.html  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
